# notino_scraper

./: .gitignore  README.md  __main__.py  config.yml  products.json  pyproject.toml  requirements.txt  setup.cfg
notino_scraper/: __init__.py  config_handler.py  data_structures.py  notino.py  notino_scraper.py  product.py  product_list.py  product_not_found.py  scraper.py
notino_scraper/data_structures/: __init__.py  data_structures.py  product.py  product_list.py  product_not_found.py
notino_scraper/scraper/: navigation_handler.py  scraper.py  selectors.py  utils.py  web_driver_wrapper.py
