[tool.poetry]
name = "notino-scraper"
version = "0.1.0"
description = "Tool to fetch data from a specific website."
authors = ["aubin-tchoi <aubin.tchoi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "notino_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
async-generator = "1.10"
attrs = "22.2.0"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
click = "8.1.3"
contourpy = "1.0.7"
cycler = "0.11.0"
exceptiongroup = "1.1.0"
fonttools = "4.38.0"
h11 = "0.14.0"
idna = "3.4"
joblib = "1.2.0"
kiwisolver = "1.4.4"
matplotlib = "3.6.3"
nltk = "3.8.1"
numpy = "1.24.1"
outcome = "1.2.0"
packaging = "23.0"
pandas = "1.5.3"
pillow = "9.4.0"
pyparsing = "3.0.9"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
python-dotenv = "0.21.0"
pytz = "2022.7.1"
pyyaml = "6.0"
regex = "2022.10.31"
requests = "2.28.2"
seaborn = "0.12.2"
selenium = "4.7.2"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
tqdm = "4.64.1"
trio = "0.22.0"
trio-websocket = "0.9.2"
urllib3 = "1.26.14"
webdriver-manager = "3.8.5"
wsproto = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
