[metadata]
name = notino_scraper
version = 0.0.1
author = Aubin Tchoï
author_email = aubin.tchoi@gmail.com
description = CLI tool that can be used to retrieve data from the notino website.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aubin-tchoi/notino_scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = notino_scraper
packages = find:
python_requires = >=3.8

[options.packages.find]
where = notino_scraper